--- a/style.css
+++ b/style.css
@@ -4,64 +4,82 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: 50px;
+    
 }
 
 #container {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
-    background-color: grey;
-    margin: 50px;
-    width: 500px;
-
+    background-color: rgb(233, 233, 233);
+    border-radius: 20px;
+    width: 448px;
+    height: 565px;
 
 }
 
 
 #display {
     display: flex;
-    background-color: greenyellow;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    background-color: #7CFFA1;
+    font-family: 'Andalé Mono','Digital Numbers','Helvetica Neue', sans-serif;
     justify-content: right;
     align-items: center;
-    width: 90%;
-    margin-top: 20px;
-    
+    border-radius: 10px;
+    width: 388px;
+    height: 75px;
+    margin-top: 26px;
+    margin-bottom: 46px;
+    padding-right: 10px;
 }
 
 #keys {
     display: flex;
     flex-direction: column;
-    width: 100%;
-    justify-content: space-around;
+    width: 398px;
+   gap: 23px;
    
 }
 
 
 #rowOne, #rowTwo, #rowThree, #rowFour {
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     display: flex;
-    justify-content: space-around;
-    align-items: center;
+    gap: 25px;
     width: 100%;
     
 }
-#one, #two, #three, #four, #five, #six, #seven, #eight, #nine, #zero, #add, #subtract, #divide, #equals, #multiply {
+#one, #two, #three, #four, #five, #six, #seven, #eight, #nine, #zero, #add, #subtract, #divide, #equals, #multiply, #clear {
 display: flex;
+font-size: x-large;
 flex: 1;
-font-weight: bold;
-border: 3px;
-border-style:solid;
+font-weight: 400;
+border-radius: 10px;
+box-shadow: 4px 3px 10px rgb(0 0 0 / 0.2);
 justify-content: center;
 align-items: center;
-drop-shadow(16px 16px 10px black);
+height: 75px;
+width: 76px;
+}
 
+#one, #two, #three, #four, #five, #six, #seven, #eight, #nine, #zero {
+
+    background-color: rgb(255, 255, 255);
+
+}
+
+#add, #subtract, #divide, #multiply {
+    background-color: #A4FFFA;
 
 }
 
 #equals {
-    flex-grow: 2;
 
+    background-color: #FFCBA6;
+    
 }
-
+#clear {
+    background-color: #463f3b;
+    color: aliceblue;
+}
